# orx-tree

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: children_iterator.rs  parallel_walk.rs  parallelization_owned.rs  parallelization_ref.rs  paths_iterator.rs  walk_iterator.rs
examples/: bench_parallelization.rs  demo_parallelization.rs  manual_iteration.rs  mutable_recursive_traversal.rs  mutable_traversal.rs  special_iterators.rs  walks.rs
examples/utils/: benchmark_utils.rs
src/: aliases.rs  as_tree_node.rs  errors.rs  helpers.rs  ideation.rs  lib.rs  memory.rs  node.rs  node_mut.rs  node_ptr_con.rs  node_ref.rs  pinned_storage.rs  subtree.rs  tree.rs  tree_col.rs  tree_mut.rs  tree_node.rs  tree_node_idx.rs  tree_variant.rs
src/arch/variants/: any_ary.rs  dary.rs
src/arch2/: tree_variant.rs
src/arch2/dary/: dary_variant.rs  iter_df.rs  mod.rs
src/arch2/dyn/: dyn_variant.rs  mod.rs
src/arch2/memory_reclaimers/: dary_reclaimer.rs  mod.rs
src/common_traits/: clone.rs  debug.rs  display.rs  eq.rs  equality.rs  from_depth_first_iter.rs  into_iterator.rs  mod.rs  serde.rs
src/dary/: aliases.rs  mod.rs  reclaimer.rs  variant.rs
src/dyn/: aliases.rs  mod.rs  reclaimer.rs  variant.rs
src/iter/: ancestors.rs  bfs.rs  bfs_iter.rs  bfs_iter_mut.rs  bfs_mut.rs  children_mut.rs  custom_walk.rs  dfs.rs  dfs2.rs  dfs_iter.rs  dfs_iter_mut.rs  dfs_mut.rs  element.rs  iter_over.rs  kind.rs  kind_core.rs  kind_over.rs  mod.rs  traversal.rs  tree_iter.rs
src/iter/breadth_first/: bfs.rs  bfs_iter.rs  bfs_iter_mut.rs  bfs_iterable.rs  mod.rs
src/iter/depth_first/: dfs.rs  dfs_iter.rs  dfs_iter_mut.rs  dfs_iterable.rs  mod.rs
src/iter/iter_kinds/: data.rs  depth_data.rs  depth_sibling_data.rs  dfs_bfs_data.rs  dfs_bfs_depth_data.rs  dfs_bfs_depth_sibling_data.rs  dfs_bfs_kind.rs  element.rs  enumerator.rs  kind_traits.rs  mod.rs  node_data.rs  node_value.rs  over_data.rs  over_depth_data.rs  over_depth_sibling_data.rs  queue_element.rs  stack_element.rs
src/iter/post_order/: data.rs  depth_data.rs  depth_nodes.rs  depth_sibling_data.rs  element.rs  enumerator.rs  mod.rs  post_order_iter.rs  post_order_iter_mut.rs  post_order_iter_ptr.rs  post_order_iterable.rs  post_order_kind.rs
src/mutations/: insert.rs
src/parallelization/: into_con_iter.rs  mod.rs
src/subtrees/: cloned_subtree.rs  copied_subtree.rs  mod.rs  moved_subtree.rs  node_mut_as_subtree.rs  subtree.rs  tree_as_subtree.rs
src/subtrees_within/: cloned_subtree.rs  copied_subtree.rs  mod.rs  moved_subtree.rs  subtree_within.rs
src/tests/: mod.rs
src/tests/node_mut/: mod.rs  push_child_tree.rs  push_sibling_tree.rs  push_tree.rs  replace.rs  swap_subtrees.rs  utils.rs
src/traversal/: element.rs  element_mut.rs  elements.rs  enumeration.rs  enumerations.rs  factory.rs  into_iter_guard.rs  mod.rs  node_item.rs  node_item_mut.rs  over.rs  over_mut.rs  traversal.rs  traverser.rs  traverser2.rs  traverser_core.rs  traverser_mut.rs
src/traversal/breadth_first/: bfs_enumeration.rs  into_iter.rs  into_iter_filtered.rs  iter_mut.rs  iter_ptr.rs  iter_ref.rs  mod.rs  queue.rs  traverser.rs  traverser_core.rs
src/traversal/breadth_first/tests/: bfs_into_iter.rs  bfs_iter_mut.rs  bfs_iter_ptr.rs  bfs_iter_ref.rs  bfs_traverser.rs  bfs_traverser_mut.rs  mod.rs
src/traversal/depth_first/: dfs.rs  dfs_core.rs  dfs_element.rs  dfs_enumeration.rs  dfs_iter.rs  dfs_iter_ptr.rs  into_iter.rs  into_iter_filtered.rs  iter_mut.rs  iter_ptr.rs  iter_ref.rs  mod.rs  stack.rs  traverser.rs  traverser_core.rs
src/traversal/depth_first/tests/: dfs_into_iter.rs  dfs_iter.rs  dfs_iter_mut.rs  dfs_iter_ptr.rs  dfs_iter_ref.rs  dfs_traverser.rs  dfs_traverser_mut.rs  mod.rs
src/traversal/post_order/: into_iter.rs  into_iter_filtered.rs  iter_mut.rs  iter_ptr.rs  iter_ref.rs  mod.rs  post_element.rs  post_enumeration.rs  states.rs  traverser.rs  traverser_core.rs
src/traversal/post_order/tests/: mod.rs  post_order_iter_into.rs  post_order_iter_mut.rs  post_order_iter_ptr.rs  post_order_iter_ref.rs  post_order_traverser.rs  post_order_traverser_mut.rs
src/variants/: dyn.rs  mod.rs  tree_variant.rs
tests/: dyn.rs  iterator_lifetimes.rs  leaf_nodes.rs  node_ref_lifetime.rs  send_sync_indices.rs  serde.rs
