[package]
name = "orx-tree"
version = "1.11.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A beautiful tree 🌳 with convenient, efficient, parallelizable growth, mutation and traversal features."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-tree/"
keywords = ["tree", "data-structures", "traversal", "traverse", "binarytree"]
categories = ["data-structures", "algorithms", "rust-patterns", "no-std"]
rust-version = "1.88"

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-self-or = "1.2.0"
serde = { version = "1.0.228", optional = true, default-features = false }
orx-pinned-vec = { version = "3.21.0", default-features = false }
orx-split-vec = { version = "3.22.0", default-features = false }
# orx-selfref-col = { version = "2.15.0", default-features = false }
orx-selfref-col = { path = "../orx-selfref-col", default-features = false }
orx-concurrent-iter = { version = "3.1.0", default-features = false }
orx-parallel = { version = "3.3.0", default-features = false, optional = true }

[dev-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
criterion = "0.5.1"
rayon = { version = "1.10.0" }
serde_json = { version = "1.0.145", default-features = false, features = [
    "std",
] }
test-case = { version = "3.3.1", default-features = false }

[features]
default = ["parallel"]
parallel = ["dep:orx-parallel"]
# old name, preserved until next major version
orx-parallel = ["parallel"]
serde = ["dep:serde"]

[[bench]]
name = "walk_iterator"
harness = false

# Lints that apply to all files and targets
[lints.clippy]
uninlined_format_args = "warn"
